CMake: add USE_XCB and scaffolding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ option(USE_PANDOC "Build man pages and HTML reference with pandoc" ON)
 option(USE_POC "Build small, uninstalled proof-of-concept binaries" ON)
 option(USE_QRCODEGEN "Disable libqrcodegen QR code support" ON)
 option(USE_STATIC "Build static libraries (in addition to shared)" ON)
+option(USE_XCB "Disable xcb (might still be pulled in by other libs)" ON)
 set(USE_MULTIMEDIA "ffmpeg" CACHE STRING "Multimedia engine, one of 'ffmpeg', 'oiio', or 'none'")
 set_property(CACHE USE_MULTIMEDIA PROPERTY STRINGS ffmpeg oiio none)
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release MinSizeRel RelWithDebInfo Coverage)
@@ -87,6 +88,9 @@ pkg_check_modules(OIIO REQUIRED OpenImageIO>=2.1)
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND OpenImageIO)
 endif()
 find_library(MATH_LIBRARIES m)
+if(${USE_XCB})
+pkg_check_modules(XCB REQUIRED xcb>=1.14)
+endif()
 if(${USE_DOCTEST})
 find_package(doctest 2.3.5)
 set_package_properties(doctest PROPERTIES TYPE REQUIRED)
@@ -230,6 +234,14 @@ target_link_libraries(notcurses PRIVATE ${OIIO_LIBRARIES})
 target_link_libraries(notcurses-static PRIVATE ${OIIO_STATIC_LIBRARIES})
 target_link_directories(notcurses PRIVATE ${OIIO_LIBRARY_DIRS})
 target_link_directories(notcurses-static PRIVATE ${OIIO_STATIC_LIBRARY_DIRS})
+endif()
+if(${USE_XCB})
+target_include_directories(notcurses PUBLIC "${XCB_INCLUDE_DIRS}")
+target_include_directories(notcurses-static PUBLIC "${XCB_STATIC_INCLUDE_DIRS}")
+target_link_libraries(notcurses PRIVATE ${XCB_LIBRARIES})
+target_link_libraries(notcurses-static PRIVATE ${XCB_STATIC_LIBRARIES})
+target_link_directories(notcurses PRIVATE ${XCB_LIBRARY_DIRS})
+target_link_directories(notcurses-static PRIVATE ${XCB_STATIC_LIBRARY_DIRS})
 endif()
 
 # don't want these on freebsd
