ncls getopt skeleton #693

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -506,6 +506,19 @@ target_link_libraries(notcurses-input
     notcurses++
 )
 
+# ncls
+file(GLOB LSSRC CONFIGURE_DEPENDS src/ls/*.cpp)
+add_executable(ncls ${LSSRC})
+target_include_directories(ncls
+  PRIVATE
+    include
+    "${PROJECT_BINARY_DIR}/include"
+)
+target_link_libraries(ncls
+  PRIVATE
+    notcurses++
+)
+
 # notcurses-tetris
 file(GLOB TETRISSRC CONFIGURE_DEPENDS src/tetris/*.cpp)
 add_executable(notcurses-tetris ${TETRISSRC})
@@ -665,6 +678,7 @@ install(FILES ${MARKDOWN} DESTINATION ${CMAKE_INSTALL_DOCDIR})
 
 install(TARGETS notcurses-demo DESTINATION bin)
 install(TARGETS notcurses-input DESTINATION bin)
+install(TARGETS ncls DESTINATION bin)
 install(TARGETS ncneofetch DESTINATION bin)
 install(TARGETS notcurses-tetris DESTINATION bin)
 if(${USE_FFMPEG} OR ${USE_OIIO})
