--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+# 3.14.0 introduced NAME_WLE
 cmake_minimum_required(VERSION 3.14.0)
 project(notcurses VERSION 2.0.4
   DESCRIPTION "Blingful UI for modern terminal emulators"
