--- a/.drone.yml
+++ b/.drone.yml
@@ -39,7 +39,7 @@ steps:
     - python3 setup.py sdist build
     - cd ../rust
     - cargo build
-    - cargo t
+    - env TERM=xterm cargo t
 ---
 kind: pipeline
 type: docker
