rust: improve testing
- add new alias `t_all` for running every test even if some fail.
- call it from `.drone.yml` to have more complete testing picture.
- add a new test for `notcurses_init` as the first test.

--- a/.drone.yml
+++ b/.drone.yml
@@ -39,7 +39,7 @@ steps:
     - python3 setup.py sdist build
     - cd ../rust
     - cargo build
-    - env TERM=xterm cargo t
+    - env TERM=xterm cargo t_all
 ---
 kind: pipeline
 type: docker
