--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: debian-unstable
 
 steps:
 - name: debian-build
-  image: dankamongmen/unstable_builder:2020-10-25a
+  image: dankamongmen/unstable_builder:2020-11-17b
   commands:
     - export LANG=en_US.UTF-8
     - mkdir build
