drop -V argument from CTest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -525,8 +525,7 @@ endif()
 
 # Testing
 if(${BUILD_TESTING})
-# sadly, this doesn't take effect until CMake 3.17...
-set(CMAKE_CTEST_ARGUMENTS "-V")
+#set(CMAKE_CTEST_ARGUMENTS "-V")
 enable_testing()
 # the accursed Ubuntu buildd sets "TERM=unknown" for unfathomable reasons
 if(DEFINED ENV{TERM} AND NOT $ENV{TERM} STREQUAL "unknown" AND USE_POC)
