--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
     - make -j2
     - env TERM=xterm make test
     - make install
-    - cd ../python
+    - cd ../cffi
     - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
     - env TERM=xterm LD_LIBRARY_PATH=/usr/local/lib ./notcurses-pydemo > /dev/null
     - env TERM=xterm LD_LIBRARY_PATH=/usr/local/lib ./notcurses-direct-pydemo > /dev/null
@@ -35,7 +35,7 @@ steps:
     - env TERM=xterm make test
     - make install
     - ldconfig
-    - cd ../python
+    - cd ../cffi
     - python3 setup.py sdist build
     - cd ../rust
     - cargo build
