--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -539,6 +539,14 @@ add_test(
   COMMAND ncpp_build_exceptions
 )
 add_test(
+  NAME sgr-full
+  COMMAND sgr-full
+)
+add_test(
+  NAME sgr-direct
+  COMMAND sgr-direct
+)
+add_test(
   NAME rgb
   COMMAND rgb
 )
