add NOTCURSES_VERSION_COMPARABLE #1131

--- a/tools/version.h.in
+++ b/tools/version.h.in
@@ -7,10 +7,11 @@
 #define NOTCURSES_VERNUM_PATCH @notcurses_VERSION_PATCH@
 #define NOTCURSES_VERNUM_TWEAK @notcurses_VERSION_TWEAK@
 
-#define NOTCURSES_VERNUM_ORDERED \
- ((NOTCURSES_VERNUM_MAJOR << 16u) + \
-  (NOTCURSES_VERNUM_MINOR << 8u) + \
-  (NOTCURSES_VERNUM_PATCH))
+#define NOTCURSES_VERSION_COMPARABLE(major, minor, patch) \
+  (((major) << 16u) + ((minor) << 8u) + (patch))
+
+#define NOTCURSES_VERNUM_ORDERED NOTCURSES_VERSION_COMPARABLE( \
+  NOTCURSES_VERNUM_MAJOR, NOTCURSES_VERNUM_MINOR, NOTCURSES_VERNUM_PATCH)
 
 #define NOTCURSES_VERSION_MAJOR "@notcurses_VERSION_MAJOR@"
 #define NOTCURSES_VERSION_MINOR "@notcurses_VERSION_MINOR@"
