[Misc] A hodgepodge of tiny changes
CMake:
  Simplify cmake target+version config generation and make it actually
  work.  With the changes it is now possible to detect and use
  `Notcurses` in the following way:

     find_package(Notcurses REQUIRED)
     ...
     target_link_libraries(myapp PRIVATE notcurses::notcurses)

  Also, added the same CMake configuration for `Notcurses++`, to be used
  in the following way:

     find_package(Notcurses REQUIRED
     find_package(Notcurses++ REQUIRED)
     ...
     target_link_libraries(myapp PRIVATE notcurses++::notcurses++)

Docs:
  `notcurses_cell(3)`: `cell_styles_{on,off} -> cell_{on,off}_styles`
  and `cell_load_simple` -> `cell_load_char`

C++ API:
  * Plane: added constructors taking `ncplane_options const&` instead of
    the multitude of individual parameters
  * Plane: drop `struct` when `ncplane_options` is used.
  * Plane: added `strdup` (`cell_strdup`)
  * Plane: added `extract` (`cell_extract`)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -601,22 +601,46 @@ include(CMakePackageConfigHelpers)
 configure_file(tools/version.h.in include/version.h)
 configure_file(tools/builddef.h.in include/builddef.h)
 
-configure_package_config_file(tools/NotcursesConfig.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/NotcursesConfig.cmake
-  INSTALL_DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/notcurses/cmake
-)
-
 write_basic_package_version_file(
   ${CMAKE_CURRENT_BINARY_DIR}/NotcursesConfigVersion.cmake
   COMPATIBILITY SameMajorVersion
 )
 
+write_basic_package_version_file(
+  ${CMAKE_CURRENT_BINARY_DIR}/Notcurses++ConfigVersion.cmake
+  COMPATIBILITY SameMajorVersion
+  )
+
 # Installation
 install(FILES
-  "${CMAKE_CURRENT_BINARY_DIR}/NotcursesConfig.cmake"
   "${CMAKE_CURRENT_BINARY_DIR}/NotcursesConfigVersion.cmake"
   DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Notcurses"
 )
+
+install(TARGETS notcurses
+  EXPORT "NotcursesTargets"
+  )
+
+install(EXPORT "NotcursesTargets"
+  NAMESPACE "notcurses::"
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Notcurses"
+  FILE "NotcursesConfig.cmake"
+)
+
+install(FILES
+  "${CMAKE_CURRENT_BINARY_DIR}/Notcurses++ConfigVersion.cmake"
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Notcurses++"
+  )
+
+install(TARGETS notcurses++
+  EXPORT "Notcurses++Targets"
+  )
+
+install(EXPORT "Notcurses++Targets"
+  NAMESPACE "notcurses++::"
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Notcurses++"
+  FILE "Notcurses++Config.cmake"
+  )
 
 install(FILES
   ${CMAKE_CURRENT_BINARY_DIR}/notcurses.pc
