basic structure for libvlc backend #1101

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,18 +28,21 @@ option(USE_PANDOC "Build man pages and HTML reference with pandoc" ON)
 option(USE_POC "Build small, uninstalled proof-of-concept binaries" ON)
 option(USE_QRCODEGEN "Disable libqrcodegen QR code support" ON)
 option(USE_STATIC "Build static libraries (in addition to shared)" ON)
-set(USE_MULTIMEDIA "ffmpeg" CACHE STRING "Multimedia engine, one of 'ffmpeg', 'oiio', or 'none'")
-set_property(CACHE USE_MULTIMEDIA PROPERTY STRINGS ffmpeg oiio none)
+set(USE_MULTIMEDIA "ffmpeg" CACHE STRING "Multimedia engine, one of 'ffmpeg', 'oiio', 'vlc', or 'none'")
+set_property(CACHE USE_MULTIMEDIA PROPERTY STRINGS ffmpeg oiio vlc none)
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release MinSizeRel RelWithDebInfo Coverage)
 ############## END (additional) USER-SELECTABLE OPTIONS ##################
 set(USE_FFMPEG OFF)
 set(USE_OIIO OFF)
+set(USE_VLC OFF)
 if(${USE_MULTIMEDIA} STREQUAL "ffmpeg")
   set(USE_FFMPEG ON)
 elseif(${USE_MULTIMEDIA} STREQUAL "oiio")
   set(USE_OIIO ON)
+elseif(${USE_MULTIMEDIA} STREQUAL "vlc")
+  set(USE_VLC ON)
 elseif(NOT ${USE_MULTIMEDIA} STREQUAL "none")
-  message(FATAL_ERROR "USE_MULTIMEDIA must be one of 'oiio', 'ffmpeg', 'none' (was '${USE_MULTIMEDIA}')")
+  message(FATAL_ERROR "USE_MULTIMEDIA must be 'oiio', 'ffmpeg', 'vlc', or 'none' (was '${USE_MULTIMEDIA}')")
 endif()
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
@@ -86,6 +89,9 @@ set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND FFMpeg)
 elseif(${USE_OIIO})
 pkg_check_modules(OIIO REQUIRED OpenImageIO>=2.1)
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND OpenImageIO)
+elseif(${USE_VLC})
+pkg_check_modules(VLC REQUIRED libvlc>=3.0.9)
+set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND libvlc)
 endif()
 find_library(MATH_LIBRARIES m)
 if(${USE_DOCTEST})
@@ -230,6 +236,13 @@ target_link_libraries(notcurses PRIVATE ${OIIO_LIBRARIES})
 target_link_libraries(notcurses-static PRIVATE ${OIIO_STATIC_LIBRARIES})
 target_link_directories(notcurses PRIVATE ${OIIO_LIBRARY_DIRS})
 target_link_directories(notcurses-static PRIVATE ${OIIO_STATIC_LIBRARY_DIRS})
+elseif(${USE_VLC})
+target_include_directories(notcurses PUBLIC "${VLC_INCLUDE_DIRS}")
+target_include_directories(notcurses-static PUBLIC "${VLC_STATIC_INCLUDE_DIRS}")
+target_link_libraries(notcurses PRIVATE ${VLC_LIBRARIES})
+target_link_libraries(notcurses-static PRIVATE ${VLC_STATIC_LIBRARIES})
+target_link_directories(notcurses PRIVATE ${VLC_LIBRARY_DIRS})
+target_link_directories(notcurses-static PRIVATE ${VLC_STATIC_LIBRARY_DIRS})
 endif()
 
 # don't want these on freebsd
@@ -533,7 +546,7 @@ target_link_libraries(notcurses-tetris
 )
 
 # notcurses-view
-if(${USE_FFMPEG} OR ${USE_OIIO})
+if(${USE_FFMPEG} OR ${USE_OIIO} OR ${USE_VLC})
 file(GLOB VIEWSRCS CONFIGURE_DEPENDS src/view/*.cpp)
 add_executable(notcurses-view ${VIEWSRCS})
 target_include_directories(notcurses-view
@@ -668,7 +681,7 @@ install(FILES
   DESTINATION ${PKGCONFIG_DIR}
   )
 
-if(${USE_FFMPEG} OR ${USE_OIIO})
+if(${USE_FFMPEG} OR ${USE_OIIO} OR ${USE_VLC})
 file(GLOB TESTDATA CONFIGURE_DEPENDS data/*)
 # Don't install source materia for self-originated multimedia
 list(FILTER TESTDATA EXCLUDE REGEX ".*xcf$")
@@ -686,7 +699,7 @@ install(TARGETS notcurses-input DESTINATION bin)
 install(TARGETS ncls DESTINATION bin)
 install(TARGETS ncneofetch DESTINATION bin)
 install(TARGETS notcurses-tetris DESTINATION bin)
-if(${USE_FFMPEG} OR ${USE_OIIO})
+if(${USE_FFMPEG} OR ${USE_OIIO} OR ${USE_VLC})
 install(TARGETS notcurses-view DESTINATION bin)
 endif()
 
