NEWS: mention ncdirect image render split

--- a/.drone.yml
+++ b/.drone.yml
@@ -66,10 +66,9 @@ name: ubuntu-focal
 
 steps:
 - name: ubuntu-build
-  image: dankamongmen/hirsute:2020-12-21a
+  image: dankamongmen/hirsute:2020-12-21b
   commands:
     - export LANG=en_US.UTF-8
-    - apt-get -y install cmake
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_MULTIMEDIA=none ..
