--- a/.drone.yml
+++ b/.drone.yml
@@ -66,7 +66,7 @@ name: ubuntu-focal
 
 steps:
 - name: ubuntu-build
-  image: dankamongmen/hirsute:2020-12-21b
+  image: dankamongmen/hirsute:2020-12-27a
   commands:
     - export LANG=es_ES.UTF-8
     - mkdir build
