[WIP] macOS support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,12 @@ include(GNUInstallDirs)
 include(CMakeDependentOption)
 include(FeatureSummary)
 
+if(APPLE)
+  set(QRCODEGEN_OPTION_DEFAULT OFF)
+else()
+  set(QRCODEGEN_OPTION_DEFAULT ON)
+endif()
+
 ###################### USER-SELECTABLE OPTIONS ###########################
 # BUILD_TESTING is defined by CTest
 option(DFSG_BUILD "DFSG build (no non-free media/code)" OFF)
@@ -26,7 +32,7 @@ cmake_dependent_option(
 option(USE_DOXYGEN "Build HTML cross reference with doxygen" OFF)
 option(USE_PANDOC "Build man pages and HTML reference with pandoc" ON)
 option(USE_POC "Build small, uninstalled proof-of-concept binaries" ON)
-option(USE_QRCODEGEN "Disable libqrcodegen QR code support" ON)
+option(USE_QRCODEGEN "Disable libqrcodegen QR code support" ${QRCODEGEN_OPTION_DEFAULT})
 option(USE_STATIC "Build static libraries (in addition to shared)" ON)
 set(USE_MULTIMEDIA "ffmpeg" CACHE STRING "Multimedia engine, one of 'ffmpeg', 'oiio', or 'none'")
 set_property(CACHE USE_MULTIMEDIA PROPERTY STRINGS ffmpeg oiio none)
@@ -67,6 +73,43 @@ add_compile_options(-Wall -Wextra -W -Wshadow -Wformat -fexceptions)
 message(STATUS "Requested multimedia engine: ${USE_MULTIMEDIA}")
 message(STATUS "Requested build mode: ${CMAKE_BUILD_TYPE}")
 
+if(APPLE)
+  macro(_get_brew_prefix BREW_RECIPE_NAME VAR)
+    execute_process(
+      COMMAND "${BREW}" --prefix ${BREW_RECIPE_NAME}
+      OUTPUT_VARIABLE MAC_${VAR}_PREFIX
+      RESULT_VARIABLE MAC_${VAR}_RESULT
+    )
+
+    string(STRIP "${MAC_${VAR}_PREFIX}" MAC_${VAR}_PREFIX)
+  endmacro()
+
+  # ncurses version shipped with the latest macOS SDK is a fossilware version of 5.7 (A.D. 2008)
+  # We need 6.1, we need to take it from brew (for instance) and we need to be
+  # sneaky since the newer versions must not disrupt the fossilware installed with
+  # the SDK
+
+  # We support homebrew (https://brew.sh/) for now since I don't use anything else
+  find_program(BREW brew REQUIRED)
+
+  # We set up the environment so that pkg-config below can find ncurses
+  _get_brew_prefix(ncurses NCURSES)
+  if(NOT MAC_NCURSES_RESULT EQUAL 0)
+     message(FATAL_ERROR "Notcurses require ncurses >= 6.1 to be installed with homebrew: brew install ncurses")
+  endif()
+  set(ENV{PKG_CONFIG_PATH} "${MAC_NCURSES_PREFIX}/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")
+
+  _get_brew_prefix(libunistring UNISTRING)
+  if(NOT MAC_UNISTRING_RESULT EQUAL 0)
+     message(FATAL_ERROR "Notcurses require libunistring to be installed with homebrew: brew install libunistring")
+  endif()
+  set(LIBUNISTRING_LIBRARY_DIRS "${MAC_UNISTRING_PREFIX}/lib")
+  set(LIBUNISTRING_INCLUDE_DIRS "${MAC_UNISTRING_PREFIX}/include")
+  set(CMAKE_REQUIRED_INCLUDES "${LIBUNISTRING_INCLUDE_DIRS}")
+
+  set(MACOS_COMPAT_SRC src/lib/macos-compat.c)
+endif()
+
 find_package(PkgConfig REQUIRED)
 # don't use REQUIRED with subsequent find_package() operations; we use
 # feature_summary + set_package_properties to fail in one fell swoop.
@@ -75,6 +118,7 @@ set_package_properties(Threads PROPERTIES TYPE REQUIRED)
 # some distros (<cough>motherfucking alpine</cough> subsume terminfo directly
 # into ncurses. accept either, and may god have mercy on our souls.
 pkg_search_module(TERMINFO REQUIRED tinfo>=6.1 ncursesw>=6.1)
+
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND terminfo)
 set_package_properties(terminfo PROPERTIES TYPE REQUIRED)
 if(${USE_FFMPEG})
@@ -110,7 +154,9 @@ if(NOT "${HAVE_QRCODEGEN_H}")
 endif()
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND qrcodegen)
 endif()
-find_library(LIBRT rt)
+if(NOT APPLE)
+  find_library(LIBRT rt)
+endif()
 
 # libnotcurses (core shared library, core static library)
 file(GLOB NCSRCS CONFIGURE_DEPENDS src/lib/*.c src/lib/*.cpp)
@@ -139,12 +185,14 @@ target_include_directories(notcurses
     include
     "${PROJECT_BINARY_DIR}/include"
     "${TERMINFO_INCLUDE_DIRS}"
+    "${LIBUNISTRING_INCLUDE_DIRS}"
 )
 target_include_directories(notcurses-static
   PRIVATE
     include
     "${PROJECT_BINARY_DIR}/include"
     "${TERMINFO_STATIC_INCLUDE_DIRS}"
+    "${LIBUNISTRING_INCLUDE_DIRS}"
 )
 target_link_libraries(notcurses
   PRIVATE
@@ -165,6 +213,7 @@ target_link_libraries(notcurses-static
 target_link_directories(notcurses
   PRIVATE
     "${TERMINFO_LIBRARY_DIRS}"
+    "${LIBUNISTRING_LIBRARY_DIRS}"
 )
 target_link_directories(notcurses-static
   PRIVATE
@@ -249,6 +298,8 @@ target_compile_definitions(notcurses-static
 set(PKGCONFIG_DIR "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD")
 set(PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/libdata/pkgconfig")
+elseif(APPLE)
+set(PKGCONFIG_DIR "/usr/local/lib/pkgconfig")
 endif()
 
 # libnotcurses++
@@ -288,6 +339,7 @@ set(NCPP_INCLUDE_DIRS
   include
     "${PROJECT_BINARY_DIR}/include"
     "${TERMINFO_INCLUDE_DIRS}"
+    "${LIBUNISTRING_INCLUDE_DIRS}"
   )
 
 target_include_directories(notcurses++
@@ -362,7 +414,7 @@ install(FILES ${NCPP_INTERNAL_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/n
 
 # notcurses-demo
 file(GLOB DEMOSRCS CONFIGURE_DEPENDS src/demo/*.c)
-add_executable(notcurses-demo ${DEMOSRCS})
+add_executable(notcurses-demo ${DEMOSRCS} ${MACOS_COMPAT_SRC})
 target_compile_definitions(notcurses-demo
   PRIVATE
     _GNU_SOURCE
@@ -371,6 +423,7 @@ target_include_directories(notcurses-demo
   PRIVATE
     include
     "${PROJECT_BINARY_DIR}/include"
+    "${LIBUNISTRING_INCLUDE_DIRS}"
   PUBLIC
     "${AVCODEC_INCLUDE_DIRS}"
     "${AVFORMAT_INCLUDE_DIRS}"
@@ -383,13 +436,20 @@ target_link_libraries(notcurses-demo
     unistring
     ${MATH_LIBRARIES}
 )
+if(APPLE)
+  target_link_directories(notcurses-demo
+    PRIVATE
+      "${LIBUNISTRING_LIBRARY_DIRS}"
+  )
+endif()
 
 # tiny proofs of concept, one binary per source file
 if(USE_POC)
 file(GLOB POCSRCS CONFIGURE_DEPENDS src/poc/*.c src/poc/*.cpp)
+
 foreach(f ${POCSRCS})
   get_filename_component(fe "${f}" NAME_WE)
-  add_executable(${fe} ${f})
+  add_executable(${fe} ${f} ${MACOS_COMPAT_SRC})
   target_include_directories(${fe}
     PRIVATE include "${TERMINFO_INCLUDE_DIRS}"
     "${PROJECT_BINARY_DIR}/include"
@@ -535,7 +595,7 @@ target_link_libraries(notcurses-tetris
 # notcurses-view
 if(${USE_FFMPEG} OR ${USE_OIIO})
 file(GLOB VIEWSRCS CONFIGURE_DEPENDS src/view/*.cpp)
-add_executable(notcurses-view ${VIEWSRCS})
+add_executable(notcurses-view ${VIEWSRCS} ${MACOS_COMPAT_SRC})
 target_include_directories(notcurses-view
   PRIVATE
     include
@@ -557,6 +617,7 @@ target_include_directories(notcurses-tester
   PRIVATE
     include
     "${PROJECT_BINARY_DIR}/include"
+    "${TERMINFO_INCLUDE_DIRS}"
     src/lib
 )
 target_link_libraries(notcurses-tester
@@ -564,7 +625,15 @@ target_link_libraries(notcurses-tester
     unistring
     notcurses++
     "${TERMINFO_LIBRARIES}"
+    doctest::doctest
 )
+if(APPLE)
+  target_link_directories(notcurses-tester
+    PRIVATE
+      "${TERMINFO_LIBRARY_DIRS}"
+      "${LIBUNISTRING_LIBRARY_DIRS}"
+  )
+endif()
 add_test(
   NAME notcurses-tester
   COMMAND notcurses-tester -p ${CMAKE_CURRENT_SOURCE_DIR}/data
